PP-14778 - Changes Part 2/3: - Replaced deprecated Java APIs and updated calls. - optimised import - Fixed Java compiler warnings; - Updated unit tests as needed.
No functional changes intended; behavior preserved.